--- a/www/index.html
+++ b/www/index.html
@@ -34,8 +34,15 @@
                 <p class="event received">Device is Ready</p>
             </div>
         </div>
+        <div>
+            <input type="text" name="thisText" id="thisText" placeholder="Type something to say...">
+            <input type="button" name="sayThis_button" id="sayThis_button" value="Say This!">
+        </div>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/myStuff.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
